--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons-react": "^3.14.0",
     "aos": "^2.3.4",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flowbite": "^2.5.1",
+    "framer-motion": "^11.3.31",
     "lucide-react": "^0.435.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
