--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.19.0",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.435.0",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
+    "openai": "^4.58.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
