--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
     "flowbite": "^2.5.1",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.435.0",
