--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/BarChart.js",
+    "components/BarChart.tsx",
     "components/Modal.js",
     "components/Them.tsx"
   ],
