--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^2.5.1",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.435.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.16.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
