--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flowbite": "^2.5.1",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.435.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.6",
     "next-themes": "^0.3.0",
     "openai": "^4.58.1",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/file-saver": "^2.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.16.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
